--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -3,4 +3,7 @@
 }
 .App-Body{
     min-height: 90vh;
+    background-image: url('https://i.imgur.com/WHoW60p.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
