--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -3,7 +3,8 @@
 }
 .App-Body{
     min-height: 90vh;
-    background-image: url('https://i.imgur.com/WHoW60p.jpg');
+    background-color: #fff;
+    /* background-image: url('https://i.imgur.com/WHoW60p.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
 }
