--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -1,6 +1,7 @@
 .landing-page-body{
     background-color: black;
     color: white;
+    font-family: 'Playfair Display', serif;
 }
 .emphasize{
     color: red;
