--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -10,3 +10,9 @@
     padding:12px;
     height: 75px;
 }
+@media screen and (max-width: 450px){
+    footer{
+        position:absolute;
+    }
+}
+
