--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,3 +1,7 @@
+.grid-container{
+    display: grid;
+    grid-template-rows: auto auto auto;
+}
 .home-container{
     display: grid;
     grid-template-columns: 45% 45%;
