--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -23,6 +23,7 @@
 .languages-info{
     margin-top: 25px;
     width: 100%;
+    margin-bottom: 50px;
 }
 @media screen and (max-width: 980px){
    .about-component{
@@ -32,6 +33,7 @@
    .current-projects-component{
        width: 100%;
        display: block;
+       margin-top: 25px;
    }
     
 }
