--- a/src/Components/YourPath/YourPath.css
+++ b/src/Components/YourPath/YourPath.css
@@ -1,9 +1,11 @@
+/* This is to add a border and margin around the photos */
 .project-photos{
     margin:5px;
     border: 3px solid black;
 }
+/* this is to format the text of the description */
 .project-description{
-    width:90%;
+    width:65%;
     margin-top: 25px;
     margin-left: auto;
     margin-right: auto;
