--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -4,7 +4,9 @@
     margin-right: 5px;
 }
 .contact-photo{
-    width: 100%; 
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%; 
     /* background-image: url('https://i.imgur.com/EQuwGo2.png');
     background-size: cover;
     background-repeat: no-repeat; */
@@ -12,4 +14,7 @@
 
 .contact-container{
     width:100%;
+}
+.contact-text{
+    margin-top: 25px;
 }
