--- a/src/Components/YourPath/YourPath.css
+++ b/src/Components/YourPath/YourPath.css
@@ -3,6 +3,14 @@
     margin:5px;
     border: 3px solid black;
 }
+.project-photos:hover{
+    transform: scale(1.4);
+
+    position: "absolute";
+    top: "50%";
+    left: "50%";
+    transform: "translate(-50%, -50%)";
+}
 .this-project-title{
     margin-top:30px;
 }
